--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Erik van Widenfelt
 author_email = ew2789@gmail.com
 url = https://github.com/intecomm-trial/intecomm-eligibility
 license = GPL license, see LICENSE
-description=INTECOMM EDC form validators
+description=INTECOMM EDC eligibility
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 keywords = django edc INTECOMM EDC eligibility, clinicedc, clinical trials
