Update tox/GH actions to align support ([py310, py311], [dj41]), lint on py311

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,28 +5,14 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: ${{ matrix.codebase }} / Dj ${{ matrix.django-version }} / Py ${{ matrix.python-version }}
+    name: build (Python ${{ matrix.python-version }}, Django ${{ matrix.django-version }})
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        codebase: ['Prod', 'Dev']
+        python-version: ['3.10', '3.11']
         django-version: ['4.0', '4.1', 'dev']
-        python-version: ['3.10']
-        exclude:
-          - codebase: 'Prod'
-            django-version: 'dev'
-
-    services:
-      mysql:
-        image: mysql:latest
-        env:
-          MYSQL_DATABASE: mysql
-          MYSQL_ROOT_PASSWORD: mysql
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Install pycups and words dependency
@@ -66,7 +52,6 @@ jobs:
           tox -v
         env:
           DJANGO: ${{ matrix.django-version }}
-          EDC_CODEBASE: ${{ matrix.codebase }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
