--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.10', '3.11']
-        django-version: ['4.0', '4.1', 'dev']
-
+        django-version: ['4.1', '4.2', 'dev']
+        exclude:
+          - python-version: '3.10'
+            django-version: 'dev'
     steps:
       - name: Install pycups and words dependency
         run: |
