--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include AUTHORS CHANGES LICENSE VERSION
 include MANIFEST.in
 include *.rst
+include */locale/*/LC_MESSAGES/*.mo
 recursive-include intecomm_*/templates *
 recursive-include intecomm_*/static *
 recursive-include label_templates *
