--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.10', '3.11']
-        django-version: ['4.1', '4.2', 'dev']
-        exclude:
-          - python-version: '3.10'
-            django-version: 'dev'
+        python-version: ['3.11']
+        django-version: ['4.2', 'dev']
     steps:
       - name: Install pycups and words dependency
         run: |
